@@ -669,7 +669,8 @@ unicode_internal_encode(PyObject *self,
     if (PyUnicode_Check(obj)) {
 	data = PyUnicode_AS_DATA(obj);
 	size = PyUnicode_GET_DATA_SIZE(obj);
-	return codec_tuple(PyBytes_FromStringAndSize(data, size), size);
+	return codec_tuple(PyBytes_FromStringAndSize(data, size),
+	                   PyUnicode_GET_SIZE(obj));
     }
     else {
 	if (PyObject_AsReadBuffer(obj, (const void **)&data, &size))
